Added redis caching for /health route

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 PORT=3000
-MONGO_URI=
-JWT_SECRET=
+MONGO_URI=mongodb+srv://anoopsnair1123:anoopsnair1123@cluster0.qkf1dj6.mongodb.net/
+JWT_SECRET=384d31bbd7b27d13746496140ddd695b
+
+REDIS_HOST=redis-17119.crce217.ap-south-1-1.ec2.cloud.redislabs.com
+REDIS_PORT=17119
+REDIS_PASSWORD=SymrnfXv8lYpn8yCdaA4UOifuSd1SUJu
