--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
-    "dev": "nodemon --watch src --ext ts --exec ts-node src/server.ts"
+    "dev": "nodemon --watch src --ext ts --exec tsx src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.4",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "redis": "^5.10.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
@@ -29,6 +30,7 @@
     "@types/mongoose": "^5.11.96",
     "@types/node": "^25.0.9",
     "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
 }
