Added authorization and error handling for DB

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ JWT_SECRET=secret key i generated
 REDIS_HOST=check my redis account
 REDIS_PORT=123456
 REDIS_PASSWORD=check my redis account
+
+ACCESS_TOKEN_EXPIRY=15m
+REFRESH_TOKEN_EXPIRY=7d
